# linux_fake_realtime

./: .gitignore  CMakeLists.txt  README.md  config.h  linux_fake_realtime.pro  main.cpp  messurement.cpp  messurement.h
Messurements/: PC vs PI.ods
